--- a/MvcMusicStore/MvcMusicStore/packages.config
+++ b/MvcMusicStore/MvcMusicStore/packages.config
@@ -34,4 +34,5 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
+  <package id="Wrox.ProMvc4.Views.AlbumList" version="1.0.0.0" targetFramework="net40" />
 </packages>
